--- a/task1.html
+++ b/task1.html
@@ -5,7 +5,133 @@
         <title>徐霄龙的第一个html</title>
     </head>
     <body>
-        <h1>这是一个神奇的网站</h1>
-
+        <div id="header">
+            <h1>这是一个神奇的网站</h1>
+            <ul>
+                <li><a href="index.html">连接一</a></li>
+                <li><a href="index.html">连接二</a></li>
+                <li><a href="index.html">连接三</a></li>
+            </ul>
+        </div>
+        <div class="p1">
+            <h2>这是第一篇文章的主标题</h2>
+            <h2>这是第一篇文章的副标题</h2>
+            <p>作者就是爷，发表时间是20000年</p>
+            <p class="first">
+                这是一个很长的故事，辣么长辣么长辣么<strong>这里是粗体字shit</strong>辣么长辣么长辣么长辣么长辣么长辣么长
+                辣么长辣么长辣么长辣么长辣么长辣<a href="http://ife.baidu.com">这个连接我不想加的</a>辣么
+                长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长
+            </p>
+            <img src="img/a.gif" alt="rubbic" />
+            <p class="first">
+                这是上面那个故事的继续，还是长辣么长<b>还有粗体?shit</b>长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么
+                长辣么长辣么长辣<a href="http://ife.baidu.com" target="_blank">我必须要加这个链接吗</a>辣么辣么长辣么长辣么长
+                辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长
+            </p>
+        </div>
+        <div class="p2">
+            <h2>这是第二篇文章的主标题</h2>
+            <h2>这是第二篇文章的副标题</h2>
+            <p>作者还是爷，发表时间是20001年</p>
+            <p class="second">
+                这也是一个很长的故事，辣么长辣么长辣么<strong>还tm是粗体字shit</strong>辣么长辣么长辣么长辣么长辣么长辣么长
+                辣么长辣么长辣么长辣么长辣么长辣<a href="http://ife.baidu.com">还tm链接</a>辣么
+                长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长辣么长
+            </p>
+            <img src="img/b.png" alt="jugg" width="400" height="250"/>
+            <ul>
+                <li>列表一</li>
+                <li>列表二</li>
+                <li>列表三</li>
+            </ul>
+        </div>
+        <div class="photo">
+            <h2>图片（都是好看的）</h2>
+                <p>介是嘛？发条</p>
+                <img src="img/loadingscreen (6).jpg" alt="one" width="400" height="250"/>
+                <p>介是嘛？凤凰</p>
+                <img src="img/loadingscreen (12).jpg" alt="two" width="400" height="250"/>
+                <p>介是嘛？年兽</p>
+                <img src="img/loadingscreen (13).jpg" alt="three" width="400" height="250"/>
+                <p>介是嘛？熊</p>
+                <img src="img/loadingscreen (27).jpg" alt="four" width="400" height="250"/>
+                <p>介是嘛？猴子</p>
+                <img src="img/loadingscreen (28).jpg" alt="five" width="400" height="250"/>
+        </div>
+        <div class="last">
+            <h2>这是最后一篇文章的主标题</h2>
+            <h2>这是最后一篇文章的副标题</h2>
+            <p>作者又是爷，发表时间是20002年</p>
+            <ol>
+                <li>最厉害的英雄——赏金猎人</li>
+                <li>第二厉害的英雄——伐木机</li>
+                <li>第三厉害的英雄——拉比克</li>
+            </ol>
+            <p>
+                下面是一个表格，你加个框我也知道你是个表格，你不加我还是知道你是个表格
+            </p>
+            <table border="2">
+                <th scope="col">英雄</th>
+                <th>牛逼指数</th>
+                <th>帅气指数</th>
+                <th>链接</th>
+                <tr>
+                    <td>赏金猎人</td>
+                    <td>10</td>
+                    <td>10</td>
+                    <td><a href="http://baike.baidu.com/subview/547221/5066834.htm#viewPageContent" target="_blank">介绍</a></td>
+                </tr>
+                <tr>
+                    <td>伐木机</td>
+                    <td>9.5</td>
+                    <td>10</td>
+                    <td><a href="http://baike.baidu.com/link?url=YYtUpZ1kxtsm9p5VE1Yuzv04kqoTUeI_1SLSMHbcfhsIXciyUV8s3A7QMZbeNoxAYV7FLemmfFd0k2NQM9yVgLv9Yw6gMjI7ReWH_9JbCFW" target="_blank">介绍</a></td>
+                </tr>
+                <tr>
+                    <td>拉比克</td>
+                    <td>8.5</td>
+                    <td>9</td>
+                    <td><a href="http://baike.baidu.com/item/%E6%8B%89%E6%AF%94%E5%85%8B/16836699#viewPageContent" target="_blank">介绍</a></td>
+                </tr>
+                <td>总结</td>
+                <td>赏金第一</td>
+                <td colspan="2">赏金和伐木机并列第一</td>
+            </tr>
+            </table>
+        </div>
+        <form action="save.php" method="post">
+            <h2>这后面是一个侧栏</h2>
+            <h2>错了，这后面才是一个侧栏</h2>
+            <label for="email">pls enter your email:</label>
+            <input type="email" name="emali" id="email" placeholder="Enter email">
+            <p>以上邮箱必须输入</p>
+            <label for="pass">Enter密码:</label>
+            <input type="password" name="pass" id="pass" placeholder="Enter 密码">
+            <label for="pass">Enter密码 again:</label>
+            <input type="password" name="pass1" id="pass1" placeholder="Enter 密码 再次">
+            <p>密码为1000——100000位数字</p>
+            你是男是女：
+            <input type="radio" id="man" name="gender" value="male" checked="checked">
+            <label for="man">汉子</label>
+            <input type="radio" id="woman" name="gender" value="female">
+            <label for="woman">女汉子</label>
+            <label for="city">你在哪旮旯:</label>
+            <select id="city" name="city">
+                <option value="天辉">天辉</option>
+                <option value="夜魇">夜魇</option>
+                <option value="野怪">野怪</option>
+            </select>
+            <label for="role">你是什么牛人:</label>
+            <input type="checkbox" name="role" value="loc1" id="num1">
+            <label for="num1">牛逼的后期</label>
+            <input type="checkbox" name="role" value="loc2" id="num2">
+            <label for="num2">霸气的控制</label>
+            <input type="checkbox" name="role" value="loc3" id="num3">
+            <label for="num3">苦逼的辅助</label>
+            <label for="discribe">说说你自个:</label>
+            <textarea name="dis" id="discribe">属入暗号....</textarea>
+            <input type="submit" name="sub" value="引爆">
+        </form>
+        <p>版权都有&copyLeo</p>
     </body>
 </html>
