--- a/html/task2.html
+++ b/html/task2.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>徐霄龙的第二个html</title>
-        <link rel="stylesheet" href="task2-new-css.css">
+        <link rel="stylesheet" href="../css/task2-css.css">
     </head>
     <body>
         <div class="header">
