--- a/html/task19.html
+++ b/html/task19.html
@@ -19,23 +19,24 @@
             }
             .chart{
                 /*position: relative;*/
-                width: 1000px;
-                height: 300px;
+                width: 100%;
+                height: 320px;
                 border: 2px solid red;
                 /*padding-bottom: 0px;*/
             }
             .numEnter{
-                width: 1000px;
+                width: 100%;
                 height: 100px;
                 border: 2px solid red;
+                overflow: scroll;
             }
             .column{
                 /*position: absolute;*/
                 float: left;
                 /*display: inline-block;*/
                 background-color: red;
-                margin-left: 60px;
-                width: 20px
+                margin-left: 3px;
+                width: 15px
             }
         </style>
     </head>
@@ -48,6 +49,7 @@
             <button type="button" name="button" id="rightOut">右侧出</button>
             <button type="button" name="button" id="up">升序排序</button>
             <button type="button" name="button" id="down">降序排序</button>
+            <button type="button" name="button" id="random">生成随机数</button>
         </div>
         <div class="numEnter"></div>
         <div class="chart"></div>
