--- a/html/task21.html
+++ b/html/task21.html
@@ -16,7 +16,6 @@
                 /*width: 80px;
                 height: 80px;*/
                 margin-left: 20px;
-                margin-top: 30px;
             }
             #input{
                 height: 50px;
@@ -29,16 +28,17 @@
             .row {
                 /*display: table-row;*/
                 width: 100%;
-                height: 200px;
-                border: 2px solid red;
+                height: 100px;
+                margin-top: 30px;
+                /*border: 2px solid red;*/
                 /*float: left;*/
             }
             .row button{
                 /*display: table-cell;*/
                 margin: 5px;
             }
-            .numEnter{
-                /*border: 2px solid red;*/
+            .row1 {
+                height: 150px;
             }
         </style>
     </head>
@@ -50,7 +50,7 @@
                 <div class="tagShow">
                 </div>
             </div>
-            <div class="row">
+            <div class="row1">
                 <textarea name="name" id="input"></textarea>
                 <button type="button" name="button" id="leftIn">确认兴趣爱好</button>
                 <!-- <button type="button" name="button" id="rightIn">右侧入</button> -->
@@ -61,10 +61,10 @@
                 <button type="button" name="button" id="leftOut">左侧出</button>
                 <button type="button" name="button" id="rightOut">右侧出</button>
             </div> -->
-            <!-- <div class="row">
+            <div class="row">
                 <input type="text" name="name" value="输入要查询的值" id="search">
                 <button type="button" name="button" id="searchButton">查找</button>
-            </div> -->
+            </div>
 
         </div>
         <script src="../JS/task21.js">
