二叉树完成

--- a/html/task22-二叉树1.html
+++ b/html/task22-二叉树1.html
@@ -28,6 +28,11 @@
                 </div>
             </div>
         </div>
+        <div class="buttons">
+            <button type="button" name="button">前序遍历</button>
+            <button type="button" name="button">中序遍历</button>
+            <button type="button" name="button">后序遍历</button>
+        </div>
         <script src="../JS/task22-二叉树1.js"></script>
     </body>
 </html>
