--- a/html/task5-从头开始重写.html
+++ b/html/task5-从头开始重写.html
@@ -17,18 +17,190 @@
                 </ul>
             </nav>
         </header>
-        <aside>
+            <aside>
+                <h2>这是一个侧栏</h2>
+                <div class="form-area">
+                    <form class="" action="index.html" method="post">
+                        <div class="tableRow">
+                            <p>请输入邮箱地址</p>
+                            <p>
+                                <input type="text" name="name" value="" required>
+                            </p>
+                        </div>
+                        <div class="tableRow">
+                            <p></p>
+                            <p class="note">
+                                邮箱地址请按要求格式输入
+                            </p>
+                        </div>
+                        <div class="tableRow">
+                            <p>请输入密码</p>
+                            <p>
+                                <input type="password" name="name" value="">
+                            </p>
+                        </div>
+                        <div class="tableRow">
+                            <p>请重复输入密码</p>
+                            <p>
+                                <input type="password" name="name" value="">
+                            </p>
+                        </div>
+                        <div class="tableRow">
+                            <p></p>
+                            <p class="note">
+                                密码为6-16位英文数字
+                            </p>
+                        </div>
+                        <div class="tableRow">
+                            <p>性别</p>
+                            <p>
+                                <input type="radio" id="man" name="name" value="male" checked><label for="man">男</label>
+                                <input type="radio" id="women" name="name" value="female"><label for="women">女</label>
+                            </p>
+                        </div>
+                        <div class="tableRow">
+                            <p>城市</p>
+                            <p>
+                                <select>
+                                    <option value="bj">北京</option>
+                                    <option value="tj">天津</option>
+                                    <option value="sh">上海</option>
+                                </select>
+                            </p>
+                        </div>
+                        <div class="tableRow">
+                            <p>爱好</p>
+                            <p>
+                                <input type="checkbox" id="sport" name="name" value="">
+                                <label for="sport">运动</label>
+                                <input type="checkbox" id="art" name="name" value="">
+                                <label for="art">艺术</label>
+                                <input type="checkbox" id="sc" name="name" value="">
+                                <label for="sc">科学</label>
+                            </p>
+                        </div>
+                        <div class="tableRow">
+                            <p>个人描述</p>
+                            <p>
+                                <textarea placeholder="这是一个多行文本框"></textarea>
+                            </p>
+                        </div>
+                    </form>
+                    <div class="submit">
+                        <input type="submit" name="name" value="确认提交">
+                    </div>
+                </div>
 
-        </aside>
-        <article>
 
-        </article>
-        <article>
-
-        </article>
-        <article>
-
-        </article>
-
+            </aside>
+        <main>
+            <article>
+                <h2>一级标题</h2>
+                <h4 class="color-grey">二级标题</h4>
+                <h5 class="color-grey">
+                    <span>作者</span>
+                    <time>文章发表时间</time>
+                </h5>
+                <p class="text-indent">
+                    这是一个段落，这是一个段落，这是一个段落，这是一个段落，这是一个段落，这是一个段落，这是一个段落，
+                    这是一个段落，这是一个段落，换行了 <br>这是一个段落，这是一个段落，这是一个段落，换行了 <br>
+                    这是一个段落，这是一个段落， <a href="#">这里有个链接</a>这是一个段落
+                </p>
+                    <img src="../img/a.gif" width="30%" alt="" />
+                <p class="text-indent">
+                    这是一个段落，这是一个段落，这是一个段落，这是一个段落，这是一个段落，这是一个段落，这是一个段落，
+                    这是一个段落，<b>这里有粗体字</b>这是一个段落，换行了 <br>这是一个段落，这是一个段落，这是一个段落，换行了 <br>
+                    这是一个段落，这是一个段落， <a href="#">这里有个链接</a>这是一个段落
+                </p>
+            </article>
+            <article>
+                <h2>图片</h2>
+                <figure>
+                    <figcaption>好看的图片</figcaption>
+                    <img src="../img/loadingscreen (6).jpg" alt="" />
+                </figure>
+                <figure>
+                    <figcaption>好看的图片</figcaption>
+                    <img src="../img/loadingscreen (6).jpg" alt="" />
+                </figure>
+                <figure>
+                    <figcaption>好看的图片</figcaption>
+                    <img src="../img/loadingscreen (6).jpg" alt="" />
+                </figure>
+                <figure>
+                    <figcaption>好看的图片</figcaption>
+                    <img src="../img/loadingscreen (6).jpg" alt="" />
+                </figure>
+                <figure>
+                    <figcaption>好看的图片</figcaption>
+                    <img src="../img/loadingscreen (6).jpg" alt="" />
+                </figure>
+                <figure>
+                    <figcaption>好看的图片</figcaption>
+                    <img src="../img/loadingscreen (6).jpg" alt="" />
+                </figure>
+                <figure>
+                    <figcaption>好看的图片</figcaption>
+                    <img src="../img/loadingscreen (6).jpg" alt="" />
+                </figure>
+                <figure>
+                    <figcaption>好看的图片</figcaption>
+                    <img src="../img/loadingscreen (6).jpg" alt="" />
+                </figure>
+                <figure>
+                    <figcaption>好看的图片</figcaption>
+                    <img src="../img/loadingscreen (6).jpg" alt="" />
+                </figure>
+                <figure>
+                    <figcaption>好看的图片</figcaption>
+                    <img src="../img/loadingscreen (6).jpg" alt="" />
+                </figure>
+            </article>
+            <article>
+                <h2>最后一篇文章一级标题</h2>
+                <h4 class="color-grey">最后一篇文章二级标题</h4>
+                <h5 class="color-grey">
+                    <span>作者</span>
+                    <time>文章发表时间</time>
+                </h5>
+                <ol>
+                    <li>排名1</li>
+                    <li>排名2</li>
+                    <li>排名3</li>
+                </ol>
+                <div class="tab">
+                    <caption>下面是一个表格</caption>
+                    <table>
+                        <tr>
+                            <th>表头</th>
+                            <th>表头</th>
+                            <th>表头</th>
+                        </tr>
+                        <tr>
+                            <td>表内容单元格</td>
+                            <td>表内容单元格</td>
+                            <td><a href="#">操作</a></td>
+                        </tr>
+                        <tr>
+                            <td>表内容单元格</td>
+                            <td>表内容单元格</td>
+                            <td><a href="#">操作</a></td>
+                        </tr>
+                        <tr>
+                            <td>表内容单元格</td>
+                            <td>表内容单元格</td>
+                            <td><a href="#">操作</a></td>
+                        </tr>
+                        <tfoot>
+                            <tr>
+                                <td>总计</td>
+                                <td colspan="2">1000</td>
+                            </tr>
+                        </tfoot>
+                    </table>
+                </div>
+            </article>
+        </main>
+        <footer>版权所有&copy; Leo</footer>
     </body>
 </html>
