飞船部分完成

--- a/html/task26-星星与飞船.html
+++ b/html/task26-星星与飞船.html
@@ -5,6 +5,7 @@
         <title>星星与飞船</title>
         <link rel="stylesheet" href="../css/task26.css" media="screen" title="no title">
         <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="universe">
@@ -12,8 +13,7 @@
             </div>
             <div class="path-1 center" data-path=1>
                 <!-- <div class="ship-1" data-ship=1>
-                    <span>100%</span>
-                    <div class="power"></div>
+                    <div class="power"><span>100%</span></div>
                 </div> -->
             </div>
             <div class="path-2 center" data-path=2></div>
