功能完成，只需调成样式

--- a/html/task26-星星与飞船.html
+++ b/html/task26-星星与飞船.html
@@ -30,34 +30,36 @@
                     <!-- <li></li> -->
                 </ul>
             </div>
-            <div class="control-1" data-id=1>
-                <span>对1号飞船下达指令：</span>
-                <button class="newship">创建飞船</button>
-                <button class="move">开始飞行</button>
-                <button class="stop">停止飞行</button>
-                <button class="break">销毁飞船</button>
-            </div>
-            <div class="control-2" data-id=2>
-                <span>对2号飞船下达指令：</span>
-                <button class="newship">创建飞船</button>
-                <button class="move">开始飞行</button>
-                <button class="stop">停止飞行</button>
-                <button class="break">销毁飞船</button>
-            </div>
-            <div class="control-3" data-id=3>
-                <span>对3号飞船下达指令：</span>
-                <button class="newship">创建飞船</button>
-                <button class="move">开始飞行</button>
-                <button class="stop">停止飞行</button>
-                <button class="break">销毁飞船</button>
-            </div>
-            <div class="control-4" data-id=4>
-                <span>对4号飞船下达指令：</span>
-                <button class="newship">创建飞船</button>
-                <button class="move">开始飞行</button>
-                <button class="stop">停止飞行</button>
-                <button class="break">销毁飞船</button>
-            </div>
+            <control>
+                <div class="control-1" data-con=1>
+                    <span>对1号轨道下达指令：</span>
+                    <button class="create">创建飞船</button>
+                    <button class="fly">开始飞行</button>
+                    <button class="stop">停止飞行</button>
+                    <button class="destroy">销毁飞船</button>
+                </div>
+                <div class="control-2" data-con=2>
+                    <span>对2号轨道下达指令：</span>
+                    <button class="create">创建飞船</button>
+                    <button class="fly">开始飞行</button>
+                    <button class="stop">停止飞行</button>
+                    <button class="destroy">销毁飞船</button>
+                </div>
+                <div class="control-3" data-con=3>
+                    <span>对3号轨道下达指令：</span>
+                    <button class="create">创建飞船</button>
+                    <button class="fly">开始飞行</button>
+                    <button class="stop">停止飞行</button>
+                    <button class="destroy">销毁飞船</button>
+                </div>
+                <div class="control-4" data-con=4>
+                    <span>对4号轨道下达指令：</span>
+                    <button class="create">创建飞船</button>
+                    <button class="fly">开始飞行</button>
+                    <button class="stop">停止飞行</button>
+                    <button class="destroy">销毁飞船</button>
+                </div>
+            </control>
         </div>
         <script src='../JS/task26-星星与飞船.js'></script>
 
