--- a/html/task26-星星与飞船.html
+++ b/html/task26-星星与飞船.html
@@ -9,7 +9,15 @@
     </head>
     <body>
         <div class="universe">
+            <stars>
+                <!-- <star style="width:12px; height:12px; top:50%; left:20%"></star> -->
+            </stars>
             <div class="planet center">
+                <div class="hole1"></div>
+                <div class="hole2"></div>
+                <div class="hole3"></div>
+                <div class="hole4"></div>
+                <div class="hole5"></div>
             </div>
             <div class="path-1 center" data-path=1>
                 <!-- <div class="ship-1" data-ship=1>
@@ -33,31 +41,31 @@
             <control>
                 <div class="control-1" data-con=1>
                     <span>对1号轨道下达指令：</span>
-                    <button class="create">创建飞船</button>
-                    <button class="fly">开始飞行</button>
-                    <button class="stop">停止飞行</button>
-                    <button class="destroy">销毁飞船</button>
+                    <button name="create">创建飞船</button>
+                    <button name="fly">开始飞行</button>
+                    <button name="stop">停止飞行</button>
+                    <button name="destroy">销毁飞船</button>
                 </div>
                 <div class="control-2" data-con=2>
                     <span>对2号轨道下达指令：</span>
-                    <button class="create">创建飞船</button>
-                    <button class="fly">开始飞行</button>
-                    <button class="stop">停止飞行</button>
-                    <button class="destroy">销毁飞船</button>
+                    <button name="create">创建飞船</button>
+                    <button name="fly">开始飞行</button>
+                    <button name="stop">停止飞行</button>
+                    <button name="destroy">销毁飞船</button>
                 </div>
                 <div class="control-3" data-con=3>
                     <span>对3号轨道下达指令：</span>
-                    <button class="create">创建飞船</button>
-                    <button class="fly">开始飞行</button>
-                    <button class="stop">停止飞行</button>
-                    <button class="destroy">销毁飞船</button>
+                    <button name="create">创建飞船</button>
+                    <button name="fly">开始飞行</button>
+                    <button name="stop">停止飞行</button>
+                    <button name="destroy">销毁飞船</button>
                 </div>
                 <div class="control-4" data-con=4>
                     <span>对4号轨道下达指令：</span>
-                    <button class="create">创建飞船</button>
-                    <button class="fly">开始飞行</button>
-                    <button class="stop">停止飞行</button>
-                    <button class="destroy">销毁飞船</button>
+                    <button name="create">创建飞船</button>
+                    <button name="fly">开始飞行</button>
+                    <button name="stop">停止飞行</button>
+                    <button name="destroy">销毁飞船</button>
                 </div>
             </control>
         </div>
