--- a/task27/task27.html
+++ b/task27/task27.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>星星与飞船</title>
-        <link rel="stylesheet" href="../css/task26.css" media="screen" title="no title">
+        <title>星星与飞船二</title>
+        <link rel="stylesheet" href="task27.css" media="screen" title="no title">
         <script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.js"></script>
         <link href="https://netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
     </head>
@@ -69,7 +69,31 @@
                 </div>
             </control>
         </div>
-        <script src='../JS/task26-星星与飞船.js'></script>
+        <div class="cover" style="display:none">
+            <div class="mask"></div>
+            <div class="menu">
+                <div class="menu-head">请选择飞船类型</div>
+                <div class="menu-body">
+                    <span>动力系统选择:</span>
+                    <select id="menu-select-dyna">
+                        <option value="0">前进号(速率30px/s,能耗5%/s)</option>
+                        <option value="1">奔腾号(速率50px/s,能耗7%/s)</option>
+                        <option value="2">超越号(速率80px/s,能耗9%/s)</option>
+                    </select><br>
+                    <span>能源系统选择:</span>
+                    <select id="menu-select-pow">
+                        <option value="0">劲量型(补充能源速度2%/s)</option>
+                        <option value="1">光能型(补充能源速度3%/s)</option>
+                        <option value="2">永久型(补充能源速度4%/s)</option>
+                    </select>
+                </div>
+                <div class="menu-foot">
+                    <button id="cancel">取消</button>
+                    <button id="ok">确认</button>
+                </div>
+            </div>
+        </div>
+        <script src='task27.js'></script>
 
     </body>
 </html>
