--- a/html/task30-多个表单项的动态校验-对象.html
+++ b/html/task30-多个表单项的动态校验-对象.html
@@ -95,6 +95,6 @@
                 <button type="button" class="long-button">验证</button>
             </div> -->
         <!-- </div> -->
-        <script src="../JS/task30-多个表单项的动态校验-函数.js"></script>
+        <script src="../JS/task30-多个表单项的动态校验-对象.js"></script>
     </body>
 </html>
