--- a/task34/task34.html
+++ b/task34/task34.html
@@ -62,19 +62,42 @@
                 width: 40px;
                 height: 40px;
                 position: absolute;
-                top: 0;
-                left: 0;
+                /*top: 0;
+                left: 0;*/
                 background-color: red;
                 border-right: 5px solid blue;
                 box-sizing: border-box;
                 transition: 1s;
-                /*animation: 1s;*/
             }
-            /*@keyframes rainbow {
-              0% { background: #c00; }
-              50% { background: orange; }
-              100% { background: yellowgreen; }
+            /*.diamondMove1 {
+                animation: 1s rota1 forwards;
+            }
+            .diamondMove2 {
+                animation: 1s rota2 forwards;
+            }
+            .diamondMove3 {
+                animation: 1s rota3 forwards;
+            }
+            .diamondMove4 {
+                animation: 1s rota4 forwards;
             }*/
+            @keyframes rota1 {
+              0% { transform:  rotate(0deg); }
+              100% { transform: rotate(-90deg); }
+            }
+            @keyframes rota2 {
+              /*0% { transform:  rotate(0deg); }*/
+              0% { transform: rotate(-90deg); }
+              100% { transform: rotate(-180deg); }
+            }
+            @keyframes rota3 {
+              0% { transform: rotate(-180deg); }
+              100% { transform: rotate(-270deg); }
+            }
+            @keyframes rota4 {
+              0% { transform: rotate(-270deg); }
+              100% { transform: rotate(-0deg); }
+            }
             .input {
                 width: 450px;
                 height: 30px;
@@ -121,8 +144,7 @@
                 <span></span><span>1</span><span>2</span><span>3</span><span>4</span><span>5</span><span>6</span><span>7</span><span>8</span><span>9</span><span>10</span>
             </div>
             <ul class="square">
-                <div class="diamond">
-                </div>
+                <!-- <div class="diamond"></div> -->
             </ul>
         </div>
         <div class="input">
