--- a/task35/task35.html
+++ b/task35/task35.html
@@ -112,8 +112,9 @@
                 border: 1px solid grey;
             }
             .input button {
-                display: block;
+                display: inline-block;
                 margin-top: 10px;
+                margin-right: 30px;
                 width: 20%;
                 height: 100%;
                 border-radius: 5px;
@@ -198,6 +199,7 @@
             </div>
             <textarea id='id-textarea' rows="8" cols="80"></textarea>
             <button id="id-button">执行</button>
+            <button id="id-refresh">刷新</button>
         </div>
         <script src='long.js'></script>
         <script src='task35.js'></script>
